# Base_Stations_And_Storage_Systems_Test_Task

./: CMakeLists.txt  README.md
src/: input_info.cpp  main.cpp
src/include/: input_info.hpp  utils.hpp
tests/: CMakeLists.txt  base_test.cpp
